--- a/erp-quimicos/src/main/webapp/vm/layouts/header.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/header.vm
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="../../js/components/Datepicker/datepicker.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/menu.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/oculta_menu.js"></script>
+	<script type="text/javascript" src="../../js/components/jquery-BlockUI/jquery-blockui.js" charset="utf-8"></script>
 	
 	<script type="text/javascript" src="../../js/components/Hourpicker/mousewheel.js"></script>
 	<script type="text/javascript" src="../../js/components/Hourpicker/timepickerinputmask.js"></script>
