--- a/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
@@ -7,14 +7,14 @@
         
         <!--  css for this catalogo -->
         <link rel="stylesheet" href="../../css/modalbox/remisiones/formaRemisiones.css" type="text/css" />
-        <link rel="stylesheet" href="../../css/modalbox/remisiones/formaCancelaEmision.css" type="text/css" />
+        <!-- <link rel="stylesheet" href="../../css/modalbox/remisiones/formaCancelaEmision.css" type="text/css" />-->
         
         
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
 		<script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/remisiones/modalboxRemisiones.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/remisiones/modalboxCancelaEmision.js"></script>
+        <!-- <script type="text/javascript" src="../../js/components/modalbox/remisiones/modalboxCancelaEmision.js"></script>-->
         <script type="text/javascript" src="../../js/implements/remisiones/index.js" ></script>
         
         #include("${layoutmenu}")
@@ -37,12 +37,14 @@
         <!--Esta tabla va  en la barra de buscador -->
 		<table border="0" class="tabla_buscador" style="display:none">
 			<tr>
-				<td colspan="13">&nbsp;&nbsp;</td>
+				<td colspan="23">&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="100">Folio</td>
-				<td width="20"></td>
+				<td width="70">Folio</td>
+				<td width="15"></td>
+				<td width="70">Folio&nbsp;Pedido</td>
+				<td width="15"></td>
 				<td width="200">Cliente</td>
 				<td width="15"></td>
 				<td width="100">C&oacute;digo Producto</td>
@@ -63,8 +65,10 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="100"><INPUT TYPE="text" name="busqueda_folio" style="width:100px;"></td>
-				<td width="20"></td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_folio" style="width:100px;"></td>
+				<td width="15"></td>
+				<td width="70"><input type="text" name="busqueda_folio_pedido" style="width:70px;"></td>
+				<td width="15"></td>
 				<td width="200"><INPUT TYPE="text" name="busqueda_cliente" style="width:200px;"></td>
 				<td width="15"></td>
 				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
@@ -78,10 +82,10 @@
 				</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
-				<td width="15"></td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:70px;" readOnly="true"></td>
+				<td width="10"></td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_final" style="width:90px;" readOnly="true"></td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_fecha_final" style="width:70px;" readOnly="true"></td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="button" id="boton_buscador" class="onmouseOutBuscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
