--- a/erp-quimicos/src/main/webapp/vm/invrepcomprasnetasporproducto/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invrepcomprasnetasporproducto/startup.vm
@@ -57,7 +57,10 @@
 							<td width="20"></td>
 							<td width="200"><INPUT TYPE="text" name="producto" value="" style="width:200px;"></td>
 							<td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)</a></td>
-							<td width="200"><INPUT TYPE="text" name="proveedor" style="width:200px;"></td>
+							<td width="200">
+								<INPUT TYPE="hidden" name="no_prov">
+								<INPUT TYPE="text" name="proveedor" style="width:200px;">
+							</td>
 							<td width="60"><a href="buscar_proveedor" value="" style="font-size:13px;">(Buscar)</a></td>
 							<td width="20"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 							<td width="80"><INPUT TYPE="text" name="fecha_inicial" style="width:80px;" readOnly="true"></td>
@@ -87,7 +90,8 @@
 		
 		
 
-		<div class="buscador_proveedores" style="display:none;">	
+        <!--Buscador de Proveedores-->
+        <div class="buscador_proveedores" style="display:none;">	
 			<table width="100%" border="0" class="formaBusqueda_proveedores">
 				<tr>
 					<td>
@@ -111,12 +115,12 @@
 												</tr>
 												<tr>
 													<td width="10"></td>
-													<td width="45">RFC</td>
-													<td width="150"><INPUT TYPE="text" name="campo_rfc" style="width:150px;"></td>
+													<td width="75">No. Proovedor</td>
+													<td width="100"><input type="text" name="campo_no_proveedor" style="width:100px;"></td>
 													<td width="25"></td>
-													<td width="45">E-mail</td>
-													<td width="200"><INPUT TYPE="text" name="campo_email" style="width:200px;"></td>
-													<td width="120"></td>
+													<td width="45">RFC</td>
+													<td width="250"><input type="text" name="campo_rfc" style="width:250px;"></td>
+													<td width="90"></td>
 													<td></td>
 												</tr>
 												<tr>
@@ -124,12 +128,10 @@
 												</tr>
 												<tr>
 													<td width="10"></td>
-													<td width="45">Nombre</td>
-													<td colspan="4"><INPUT TYPE="text" name="campo_nombre" style="width:420px;"></td>
-													<td width="120"></td>
-													<td>
-														<INPUT TYPE="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar">
-													</td>
+													<td width="75">Razon Social</td>
+													<td colspan="4"><input type="text" name="campo_nombre" style="width:420px;"></td>
+													<td width="90"></td>
+													<td><input type="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar"></td>
 												</tr>
 											</table>
 											
@@ -195,6 +197,7 @@
 				</tr>
 			</table>
 		</div>
+        <!--Termina Buscador de Proveedores-->
 		
 		
 		
