git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1412 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -510,6 +510,14 @@
 													<li><a href="../tipopolizas/startup.agnux">Tipos de P&oacute;liza</a></li>
 												</ul>
 											</li>
+											
+											<li>
+												<a href="#" class="sub">Procesos &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../ctbpolizacontable/startup.agnux">P&oacute;lizas Contables</a></li>
+												</ul>
+											</li>
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
