--- a/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/ctbpolizacontable/modalboxPolizasContables.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/productos/modalboxBuscaCuentaContable.js"></script>
+        <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
         <script type="text/javascript" src="../../js/implements/ctbpolizacontable/index.js" ></script>
         
         #include("${layoutmenu}")
@@ -293,48 +294,69 @@
 											</tr>
 											
 											<tr>
-												
-												<!--
-												
-												
-												700 - 635 => 65
-												
-												945 - 880 => 65
-												
-												-->
-												
-                                                    <td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
-														<table >
-															<thead>
-																<tr>
-																	<!--<td height="30"><a href="new_item" class="tooltip"><div class="onmouseOutNewItem" id="nItem"></div><span>Crear Nuevo Pedido</span></a></td>-->
-																	
-																	<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="30">&nbsp;#</td>
-																	<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="120">&nbsp;Tipo Mov.</td>
-																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="120">&nbsp;Cuenta</td>
-																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="250">&nbsp;Descripci&oacute;n</td>
-																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="150">&nbsp;Centro Costo</td>
-																	
-																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Debe</td>
-																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="120">&nbsp;Haber</td>
-																</tr>
-															</thead>
+												<td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
+													<table >
+														<thead>
+															<tr>
+																<!--<td height="30"><a href="new_item" class="tooltip"><div class="onmouseOutNewItem" id="nItem"></div><span>Crear Nuevo Pedido</span></a></td>-->
+																
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="30">&nbsp;#</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="120">&nbsp;Tipo Mov.</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="120">&nbsp;Cuenta</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="250">&nbsp;Descripci&oacute;n</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="150">&nbsp;Centro Costo</td>
+																
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Debe</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="120">&nbsp;Haber</td>
+															</tr>
+														</thead>
+													</table>
+													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:900; height: 150px; border:1px solid #C1DAD7 !important;">	
+														<table>
+															<tbody style="background-color: #FFFFFF;" valign="top" id="grid_cuentas">
+																
+															</tbody>
 														</table>
-														<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:900; height: 150px; border:1px solid #C1DAD7 !important;">	
-															<table>
-																<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos">
-																	
-																</tbody>
-															</table>
-														</div>
-                                                        
-                                                    </td>
-                                                    
-                                                    
-                                                    
-
-												
+													</div>
+												</td>
 											</tr>
+											
+											<tr>
+												<td  align="left" valign="top">
+													<div id="div_warning_grid" style="display:none;">
+														
+														<table border="0">
+															<tr>
+																<td width="10"></td>
+																<td width="830" colspan="4"><div style="color:#d41000;">&nbsp;&nbsp;Datos&nbsp;no&nbsp;validos</div></td>
+																<td width="10"></td>
+															</tr>
+															<tr>
+																<td width="10"></td>
+																<td width="20" style="background-color:#A8A9AB; font-weight: bold;"></td>
+																<td width="120" style="background-color:#A8A9AB; font-weight: bold;">C&oacute;digo&nbsp;producto</td>
+																<td width="200" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n</td>
+																<td width="490" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n&nbsp;del&nbsp;error</td>
+																<td width="10"></td>
+															</tr>
+															<tr>
+																<td width="10"></td>
+																<td colspan="5"> 
+																	<div align="left" style="width:850px; height:70px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
+																		<table id="grid_warning" border="0" style="width:830px;"">
+																			<!-- Aqui se muestran los warning
+																			style="background-color:#e7e8ea;"
+																			-->
+																		</table>
+																	</div>
+																</td>
+															</tr>
+														</table>
+													</div>
+												</td>
+											</tr>
+											
+											
 											
 										</table>
                                     </div>
