git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1425 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/modalbox/cuentascontables/formaCuentasContables.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/cuentascontables/formaCuentasContables.css
@@ -134,16 +134,16 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 }
 
 
-#grid_productos td{
+#grid_cuentas td{
 	height:18px;
 	text-align:center;
 }
 
-#grid_productos input{
+#grid_cuentas input{
 	height:15px;
 }
 
-#grid_productos select{
+#grid_cuentas select{
 	height:17px;
 }
 
