--- a/erp-quimicos/src/main/webapp/vm/cuentascontables/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cuentascontables/startup.vm
@@ -38,6 +38,8 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="150">Sucursal</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td>Cuenta&nbsp;de&nbsp;Mayor</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td>Descripci&oacute;n</td>
@@ -50,9 +52,11 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><select name="busqueda_select_cuenta_mayor" style="width:200px;"><option value="0" selected="yes">[-- --]</option></select></td>
+				<td width="150"><select name="busqueda_select_sucursal" style="width:150px;"><option value="0" selected="yes">[-- --]</option></select></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><input type="text" name="busqueda_descripcion" style="width:280px;"></td>
+				<td width="200"><select name="busqueda_select_cuenta_mayor" style="width:200px;"><option value="0" selected="yes">[-- --]</option></select></td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="280"><input type="text" name="busqueda_descripcion" style="width:280px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><input type="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -108,6 +112,19 @@
 									
                                     <div id="tabx-1" class="contenidoPes" >
                                         <table border="0" class="gral">
+											<tr>
+												<td width="5"></td>
+												<td width="80">Sucursal</td>
+												<td colspan="9" width="290"><select name="select_sucursal" style="width:290px;"></select></td>
+												<td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_suc"></div></td>
+												<td width="70"></td>
+												<td width="60"></td>
+												<td width="25"></td>
+											</tr>
+											<tr>
+												<td width="15">&nbsp;</td>
+											</tr>
+											
 											<tr>
 												<td width="5"></td>
 												<td width="80">Cuenta</td>
