git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1429 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
+++ b/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
@@ -237,3 +237,18 @@
     height:20px;
 }
 
+
+.onmouseOutEliminar {
+	background-image: url(../../../img/borrar.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:16px;
+}
+
+.onmouseOverEliminar {
+	background-image: url(../../../img/borrar1.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:16px;
+}
+
