--- a/erp-quimicos/src/main/webapp/css/modalbox/ctbpolizacontable/formaPolizasContables.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/ctbpolizacontable/formaPolizasContables.css
@@ -98,7 +98,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
 	width:945px;
-    height:365px;
+    height:530px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -134,16 +134,16 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 }
 
 
-#grid_productos td{
+#grid_cuentas td{
 	height:18px;
 	text-align:center;
 }
 
-#grid_productos input{
+#grid_cuentas input{
 	height:15px;
 }
 
-#grid_productos select{
+#grid_cuentas select{
 	height:17px;
 }
 
@@ -168,6 +168,7 @@ table tr td.grid {
 	text-align: center;
 	vertical-align: top;
 }
+
 table tr td.grid1 {
 	background: #fff;
 	border-right: 1px solid #ccc;
