--- a/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
@@ -327,7 +327,7 @@
 															<tr>
 																<td width="10"></td>
 																<td width="20" style="background-color:#A8A9AB; font-weight: bold;"></td>
-																<td width="120" style="background-color:#A8A9AB; font-weight: bold;">C&oacute;digo&nbsp;producto</td>
+																<td width="120" style="background-color:#A8A9AB; font-weight: bold;">Cuentan&nbsp;</td>
 																<td width="200" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n</td>
 																<td width="490" style="background-color:#A8A9AB; font-weight: bold;">Descripci&oacute;n&nbsp;del&nbsp;error</td>
 																<td width="10"></td>
