--- a/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
@@ -128,15 +128,15 @@
 												<td width="150" colspan="2"><input type="text" name="folio" style="width:150px;" readOnly="true"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_folio"></div></td>
 												<td width="5"></td>
-												<td width="70">Tipo</td>
+												<td width="70">Folio&nbsp;Externo</td>
+												<td width="5"></td>
+												<td width="150"><input type="text" name="folio_ext" value="" style="width:150px;" maxlength="22"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_folioext"></div></td>
+												<td width="5"></td>
+												<td width="75">Tipo</td>
 												<td width="5"></td>
 												<td width="150"><select name="select_tipo" style="width:150px;"></select></td>
-												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipo"></div></td>
-												<td width="5"></td>
-												<td width="75"></td>
-												<td width="5"></td>
-												<td width="150"></td>
-												<td width="25"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipo"></div></td>
 											</tr>
 											<tr>
 												<td width="5">&nbsp;</td>
@@ -158,7 +158,7 @@
 											</tr>
 											<tr>
 												<td width="5"></td>
-												<td width="75">Razon Social</td>
+												<td width="75">Razon&nbsp;Social</td>
 												<td width="5"></td>
 												<td colspan="7"><input type="text" name="destinatario" style="width:410px;"></td>
 												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_razonsocial"></div></td>
