git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1454 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -407,6 +407,10 @@
 													<li><a href="../gralfichatecnica/startup.agnux">Ficha Tecnica</a></li>
 												</ul>
 											</li>
+											
+											<li>
+												<a href="../invpar/startup.agnux">Configuraci&oacute;n</a>
+											</li>
 
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
